--- a/Geonet/app/build.gradle
+++ b/Geonet/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.dimitri.geonet.geonet"
-        minSdkVersion 19
+        minSdkVersion 20
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -34,6 +34,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.android.support:support-vector-drawable:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
