--- a/Geonet/app/src/main/AndroidManifest.xml
+++ b/Geonet/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+    <uses-feature android:name="android.hardware.location.gps" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -12,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_p"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -37,8 +38,32 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ConfigActivity"
+        <activity
+            android:name=".ConfigActivity"
             android:label="@string/config_title">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.dimitri.geonet.geonet.TabActivity" />
+        </activity>
+
+        <service
+            android:name=".NotificationService"
+            android:exported="false" />
+
+        <activity
+            android:name=".SolicitudesActivity"
+            android:parentActivityName=".TabActivity" />
+        <activity android:name=".NewGroupActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.dimitri.geonet.geonet.TabActivity" />
+        </activity>
+
+        <service
+            android:name=".LocationService"
+            android:exported="false" />
+
+        <activity android:name=".ContactProfile">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.dimitri.geonet.geonet.TabActivity" />
